[metadata]
name = QFinUWA
version = 1.0.3
author = Isaac Bergl
author_email = tberg644@gmail.com
description = A backtesting framework for quantitative finance for QFIN UWA.
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/QFinUWA/algo-backtester/issues
project_urls =
    Bug Tracker = https://github.com/QFinUWA/algo-backtester/issues
    repository = https://github.com/QFinUWA/algo-backtester
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
